# jipdatacore

./: .env.example  .gitignore  .ralphrc  CLAUDE.md  CLAUDE_CODE_BRIEFING.md  CONTEXT_BRIEFING.md  DATA_AUDIT_HANDOFF.md  Dockerfile  JIP_Data_Engine_v1.9.1_FINAL (1).md  JIP_Data_Engine_v2.0.md  docker-compose.yml  pyproject.toml  run_dag.py  tasks.json
.ralph/: .circuit_breaker_state  .loop_start_sha  .ralph_session  AGENT.md  fix_plan.md  progress.json  prompt.md  status.json
alembic/: env.py
app/: config.py  logging.py  main.py
dagster_app/: Dockerfile  __init__.py  assets.py  checks.py  dagster.yaml  definitions.py  registry.py  requirements.txt  resources.py  schedules.py  sensors.py  workspace.yaml
dashboard/: Dockerfile  __init__.py  api.py  app.py  bhav_backfill_monitor.html  config.py  index.html
docs/: .dashboard-state.json  board-presentation.html  calculation-methodology.md  data-map.html  data_core_readiness_M0.md  forge-dashboard.html  marketpulse-migration-plan.md
prometheus/: prometheus.yml
reports/: alembic-drift-ticket.md  etf_source_inventory_2026-04-15.md  index_source_inventory_2026-04-15.md  indicators-v2-status-2026-04-14.md  morningstar-client-broken.md  morningstar_purchase_mode_investigation.md  stale-tests-indicators-build.md
runbooks/: amfi_nav_delayed.md  corporate_action_storm.md  data_corruption.md  db_cpu_spike.md  disk_full.md  nse_bhav_delayed.md  pipeline_stuck.md  redis_down.md
scripts/: atlas_m0_etf_holdings_from_index.py  atlas_m0_etf_holdings_morningstar.py  atlas_m0_etf_holdings_universe.py  atlas_m0_fetch_microcap250.py  atlas_m0_gap_audit.py  atlas_m0_gap_fill.py  atlas_m0_readiness.py  atlas_m0_seed_global_from_stooq.py  atlas_m0_seed_intl.py  atlas_m0_universe_ingest.py  autonomous_backfill.sh  backfill_fundamentals.py  backfill_fundamentals_history.py  backfill_indicators_v2.py  backfill_indices_historical.py  backfill_mf_nav.py  backfill_mf_nav_deep.py  batch_compute.py  bootstrap_purchase_mode_from_mfpulse.py  compute_adjustments.py  cutover_indicators_v2.sh  deploy.sh  diff_technicals_old_vs_new.py  fetch_constituents_and_sectors.py  (+10 more)
(+450 files in other folders)
