[project]
name = "jip-data-engine"
version = "2.0.0"
description = "JIP Data Engine - Single source of truth for all financial data"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    # Cache
    "redis>=5.0.0",
    # Auth
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "passlib>=1.7.4",
    # Data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # HTTP clients
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    # Data sources
    "yfinance>=0.2.36",
    "fredapi>=0.5.1",
    # Validation & serialization
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Logging & monitoring
    "structlog>=24.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Security
    "cryptography>=42.0.0",
    "python-magic>=0.4.27",
    # AI & embeddings
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    # Browser automation
    "playwright>=1.42.0",
    # PDF processing
    "pymupdf>=1.24.0",
    # AWS
    "boto3>=1.34.0",
    # Utilities
    "arrow>=1.3.0",
    "orjson>=3.9.0",
    "tenacity>=8.2.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
